--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <div class="menu-item" (click)="navigateTo('locais')" *ngIf="isAdmin">
+      <div class="menu-item" (click)="navigateTo('locais')">
         <div class="icon-container location-style">
           <span class="icon">📍</span>
         </div>
