--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,5 +8,6 @@
       <input type="password" formControlName="senha" placeholder="Digite sua senha" required>
     </div>
     <button type="submit" [disabled]="loginForm.invalid">Fazer Login</button>
+    <p>Ainda não tem uma conta? <a routerLink="/register">Cadastre-se</a></p>
   </form>
 </div>
